// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SupportItem /> renders \`Progress\` component if \`isUploading\` 1`] = `
<SupportItem
  data={
    Object {
      "error": undefined,
      "fetchMore": [Function],
      "loading": false,
      "networkStatus": 7,
      "refetch": [Function],
      "startPolling": [Function],
      "stopPolling": [Function],
      "subscribeToMore": [Function],
      "supportItem": Object {
        "filename": "madeinamerica_english.srt",
        "filesize": "24576",
        "id": "qwqw",
        "language": Object {
          "displayName": "English",
        },
      },
      "updateQuery": [Function],
      "variables": Object {
        "id": "qwqw",
      },
    }
  }
  fileType="srt"
  itemId="qwqw"
  projectId="123"
>
  <li
    className="support-item isUploading"
    key="srt-English"
  >
    <Progress
      active={true}
      color="blue"
      precision={0}
      progress={true}
      size="small"
      total="24576"
      value={0}
    >
      <div
        className="ui blue small active progress"
        data-percent={0}
      >
        <div
          className="bar"
          style={
            Object {
              "width": "0%",
            }
          }
        >
          <div
            className="progress"
          >
            0%
          </div>
        </div>
      </div>
    </Progress>
    <span>
      Uploading item
    </span>
  </li>
</SupportItem>
`;

exports[`<SupportItem /> renders initial loading state without crashing 1`] = `
<SupportItem
  data={
    Object {
      "error": undefined,
      "fetchMore": [Function],
      "loading": true,
      "networkStatus": 1,
      "refetch": [Function],
      "startPolling": [Function],
      "stopPolling": [Function],
      "subscribeToMore": [Function],
      "updateQuery": [Function],
      "variables": Object {
        "id": "qwqw",
      },
    }
  }
  fileType="srt"
  itemId="qwqw"
  projectId="123"
>
  <li>
    <Loader
      active={true}
      inline={true}
      size="mini"
    >
      <div
        className="ui mini active inline loader"
      />
    </Loader>
    <span
      style={
        Object {
          "fontSize": "0.75em",
          "marginLeft": "0.5em",
        }
      }
    >
      Preparing file for upload...
    </span>
  </li>
</SupportItem>
`;
